--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "e2e": "vue-cli-service test:e2e -e TAGS='not @ignore'"
+    "e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "vue": "^2.6.6"
